<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sun音乐</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_playlist">播放列表</string>
    <string name="play_list">播放列表</string>
    <string name="title_playing">播放中</string>
    <string name="search">搜索</string>
    <string name="create_new_playlist">新建播放列表...</string>
    <string name="create_new_playlist_dialogtitle">新建播放列表</string>
    <string name="enter_playlist_name_dialog">请输入此播放列表的名称。</string>
    <string name="song_name">爱情公寓</string>
    <string name="artist">曾小贤</string>
    <string name="album_name">未知专辑</string>
    <string name="random_play">随机播放</string>
    <string name="isplaying_music_number">3/148</string>
    <string name="play_current_time">00:00</string>
    <string name="play_remaining_time">-2:40</string>
    <string name="play_song_name">暧昧</string>
    <string name="play_artist_name">杨丞琳</string>
    <string name="repeat_play">重复播放</string>
    <string name="turnoff_repeat_play">关闭重复播放</string>
    <string name="repeat_play_song">重复播放歌曲</string>
    <string name="repeat_play_all_songs">重复播放所有歌曲</string>
    <string name="cancel">取消</string>
    <string name="random_play_all">随机播放所有</string>
    <string name="unknow_performer">位置表演者</string>
    <string name="unknow_album">未知专辑</string>
    <string name="save">存储</string>
    <string name="done">完成</string>
    <string name="album">专辑</string>
    <string name="clean">清除</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="performer">表演者</string>
    <string name="grade">评分</string>
    <string name="remove">移除</string>
    <string name="song">歌曲</string>
    <string name="more">更多</string>
    <string name="num_of_album">张专辑</string>
    <string name="num_of_performer">位表演者</string>
    <string name="num_of_song">首歌曲</string>
    <string name="add_music">添加歌曲</string>
    <string name="music_service_message_notification_title_template">Music service message: %1$s</string>
    <string name="music_service_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="about">关于</string>
    <string name="about_detail">完美克隆iOS7音乐的播放器</string>
    <string name="use_tips"></string>
    <string name="share_app">分享APP</string>
    <string name="check_version">检测新版本</string>
    <string name="advice_collect">意见反馈</string>
    <string name="no_new_version">已是最新版本</string>
    <string name="app_update">软件更新</string>
    <string name="new_version_checked">检测到新版本，立即更新吗</string>
    <string name="update">更新</string>
    <string name="update_cancel">取消更新</string>
    <string name="is_updating">正在更新</string>

</resources>
