<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:background="@drawable/playlist_view_bg_selector"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <View
        android:id="@+id/View1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#D9D9D9"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/LinearLayout1" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/textView_letter" >

        <ImageView
            android:id="@+id/albumImage"
            android:layout_width="64.0dip"
            android:layout_height="64.0dip"
            android:src="@drawable/song_pic" />

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:focusable="true"
                android:shadowColor="#000000"
                android:shadowDx="0.3"
                android:shadowDy="0.3"
                android:shadowRadius="0.3"
                android:singleLine="true"
                android:text="@string/song_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/music_Artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/music_title"
                android:layout_below="@id/music_title"
                android:layout_marginTop="5.0dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/artist"
                android:textSize="16sp" 
                android:maxLength="10"/>

            <TextView
                android:id="@+id/album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/music_Artist"
                android:layout_alignBottom="@+id/music_Artist"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/music_Artist"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/album_name"
                android:textColor="@color/album_grey"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_remove"
        android:layout_toRightOf="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:text="@string/remove" 
        android:background="@color/red"/>

    <TextView
        android:id="@+id/textView_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dsad"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textStyle="bold"
        android:textColor="@color/letter_color"/>

</RelativeLayout>