<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_shape"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/list_title_RelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="top">

        <RelativeLayout
            android:id="@+id/RelativeLayout_titlebg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_bg"
            android:padding="10dp">

        </RelativeLayout>

        <TextView
            android:id="@+id/textView_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:text="@string/more"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/list_title_RelativeLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:text="1.0.0"
        android:textColor="@color/album_grey"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:text="@string/about_detail"
        android:textColor="@color/album_grey"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_gravity="center_vertical"
        android:background="@drawable/more_item_bg_selector"
        android:clickable="true"
        android:gravity="center_vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="#D9D9D9" />

        <TextView
            android:id="@+id/tv_more_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:focusable="true"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:singleLine="true"
            android:text="@string/check_version"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/arrow_grey" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_below="@+id/tv_more_list_item"
            android:layout_marginTop="20dp"
            android:background="#D9D9D9" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout2"
        android:layout_gravity="center_vertical"
        android:background="@drawable/more_item_bg_selector"
        android:clickable="true"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/tv_more_list_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:focusable="true"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:singleLine="true"
            android:text="@string/share_app"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/arrow_grey" />

        <View
            android:id="@+id/View1"
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_below="@+id/tv_more_list_item2"
            android:layout_marginTop="20dp"
            android:background="#D9D9D9" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout3"
        android:layout_gravity="center_vertical"
        android:background="@drawable/more_item_bg_selector"
        android:clickable="true"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/tv_more_list_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:focusable="true"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:singleLine="true"
            android:text="@string/advice_collect"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/arrow_grey" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_below="@+id/tv_more_list_item3"
            android:layout_marginTop="20dp"
            android:background="#D9D9D9" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout4"
        android:layout_gravity="center_vertical"
        android:background="@drawable/more_item_bg_selector"
        android:clickable="true"
        android:visibility="invisible"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/tv_more_list_item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:ellipsize="end"
            android:focusable="true"
            android:shadowColor="#000000"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.3"
            android:singleLine="true"
            android:text="赚积分"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/arrow_grey" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_below="@+id/tv_more_list_item4"
            android:layout_marginTop="20dp"
            android:background="#D9D9D9" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/AdLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="#000000"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:text="" />

</RelativeLayout>